# blockchain-supply_clain

./: .gitignore  README.md  docker-compose.yml  event_generator.py  local_node.py  network_node.py  pyproject.toml  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/docs/: integration_contract.md  modelagem_de_dados.md
backend/scripts/: __init__.py  gerar_eventos.py  iniciar_no_kafka.py  simular_ataque_gasto_duplo.py  simular_fluxo_completo.py
backend/src/: __init__.py
backend/src/api_http/: __init__.py  aplicacao_fastapi.py  no_aplicacao.py
backend/src/core/: __init__.py  config.py
backend/src/core/models/: __init__.py  block.py  dominio.py  event.py
backend/src/core/services/: __init__.py  blockchain.py  consensus.py  logs_memoria.py  mempool.py  miner.py  validator.py
backend/src/rede/: __init__.py  kafka_node.py  monitor_rede.py  no_kafka.py
backend/src/testes/: __init__.py  executor.py  models.py  registry.py
backend/src/testes/scenarios/: __init__.py  ataque_51.py  double_spend_adaptado.py
backend/src/testes/utils/: __init__.py  blockchain_snapshot.py  context_builder.py  result_formatter.py
backend/tests/integration/: test_api_http.py  test_fork_resolution.py  test_incoming_block_flow.py
backend/tests/unit/: test_block.py  test_blockchain.py  test_config.py  test_consensus.py  test_event.py  test_gerar_eventos.py  test_json_codec.py  test_mempool.py  test_miner.py  test_no_kafka.py
docs/: core_blockchain_execution_plan.md  documentação_da_camada_de_rede_kafka.md  guia_de_execucao.md  (+2 more)
(+105 files in other folders)
