[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-blockchain-core"
version = "0.1.0"
description = "Core local da blockchain para rastreabilidade em cadeia de suprimentos"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
